--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.2",
+    "csv-parser": "^2.3.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "line-reader": "^0.4.0",
     "mongoose": "^5.8.9",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
